# conference_discovery

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  mainn.py  proxy_config.yaml  pyproject.toml  requirements.txt  run_pipeline.py
conference_agent/: .env.docker.example  .env.example  AGENTS.md  __init__.py  agent.py  config.py  discovery_agent.py  health.py  log_config.py  orchestrator.py  test_run.py
conference_agent/agents/: discovery_agent.py
conference_agent/prompts/: extraction.py
conference_agent/schemas/: AGENTS.md  conference.py  discovered_links.py  homepage.py  output_keys.py  registration.py  speaker.py  sub_pages_data.py  validation.py  venue.py
conference_agent/steps/: _callbacks.py  step0_discover_conferences.py  step1_scrape_homepage.py  step2_5_discover_links.py  step2_6_probe_paths.py  step2_extract_homepage.py  step3_merge_links.py  step4_scrape_sub_pages.py  step5_extract_sub_pages.py  step6_assemble_conference.py  (+5 more)
config/: settings.yaml
notes/: comparison-report.md  iteration-01-aime.md  iteration-02-icest.md  iteration-03-isitia.md  iteration-04-pocer.md  iteration-05-laccei.md  iteration-06-10-plan.md  iteration-06-sigir2025.md  iteration-07-icimece2026.md  iteration-08-wcccr2026.md  iteration-09-interact2027.md  iteration-10-ijckg2026.md  qa-notes.md  schema-viability.md  scholarsforum-extracted.md
output/: academics_keynote.md  academics_reg_ac.md  academics_venue_ac.md  scrapling_academics.md  scrapling_reg3.md  scrapling_registration.md  scrapling_registration2.md  scrapling_speakers.md  scrapling_speakers2.md  scrapling_speakers3.md  scrapling_test_result.md  scrapling_venue.md  scrapling_venue2.md  scrapling_venue3.md
web/: __init__.py  app.py  main.py  schemas.py
(+50 files in other folders)
