[project]
name = "conference-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exa-py>=2.13.0",
    "google-adk[extensions]>=1.33.0",
    "pydantic-settings[yaml]>=2.14.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "scrapling[ai]>=0.2.99",
]
